force-app/main/default/objects/Project__c/fields/Construction_Funds_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Construction_Funds_Remaining__c</fullName>
    <formula>Construction_Funds__c -  Construction_Funds_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Funds Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>