force-app/main/default/objects/Project__c/fields/Construction_Funds_Used__c.field-meta.xml
<CustomField>
    <fullName>Construction_Funds_Used__c</fullName>
    <label>Construction Funds Used</label>
    <summarizedField>Invoice__c.Construction_Amount__c</summarizedField>
    <summaryForeignKey>Invoice__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>