force-app/main/default/objects/Project__c/fields/Equipment_Funds__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Funds__c</fullName>
    <label>Equipment Funds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>