force-app/main/default/objects/Project__c/fields/Equipment_Funds_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Funds_Remaining__c</fullName>
    <formula>Equipment_Funds__c -  Equipment_Funds_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Funds Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>