force-app/main/default/objects/Project__c/fields/Equipment_Funds_Used__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Funds_Used__c</fullName>
    <label>Equipment Funds Used</label>
    <summarizedField>Invoice__c.Equipment_Amount__c</summarizedField>
    <summaryForeignKey>Invoice__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>