force-app/main/default/objects/Project__c/fields/Funds_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Funds_Remaining__c</fullName>
    <formula>Construction_Funds_Remaining__c +  Equipment_Funds_Remaining__c +  Personnel_Funds_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funds Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>