force-app/main/default/objects/Project__c/fields/Funds_Used__c.field-meta.xml
<CustomField>
    <fullName>Funds_Used__c</fullName>
    <formula>Construction_Funds_Used__c +  Equipment_Funds_Used__c +  Personnel_Funds_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funds Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>