force-app/main/default/objects/Project__c/fields/Percentage_Construction_Funds_Used__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Construction_Funds_Used__c</fullName>
    <formula>Construction_Funds_Used__c / Construction_Funds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Construction Funds Used</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>