force-app/main/default/objects/Project__c/fields/Percentage_Equipment_Funds_Used__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Equipment_Funds_Used__c</fullName>
    <formula>Equipment_Funds_Used__c / Equipment_Funds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Equipment Funds Used</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>