force-app/main/default/objects/Project__c/fields/Percentage_Funds_Used__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Funds_Used__c</fullName>
    <formula>Funds_Used__c / Total_Funds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Funds Used</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>