force-app/main/default/objects/Project__c/fields/Percentage_Personnel_Funds_Used__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Personnel_Funds_Used__c</fullName>
    <formula>Personnel_Funds_Used__c / Personnel_Funds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Personnel Funds Used</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>