force-app/main/default/objects/Project__c/fields/Personnel_Funds__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Funds__c</fullName>
    <label>Personnel Funds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>