force-app/main/default/objects/Project__c/fields/Personnel_Funds_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Funds_Remaining__c</fullName>
    <formula>Personnel_Funds__c -  Personnel_Funds_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personnel Funds Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>