force-app/main/default/objects/Project__c/fields/Total_Funds__c.field-meta.xml
<CustomField>
    <fullName>Total_Funds__c</fullName>
    <formula>Construction_Funds__c +  Equipment_Funds__c +  Personnel_Funds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>