force-app/main/default/objects/Project__c/validationRules/Total_funds_cannot_exceed_Grant_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_funds_cannot_exceed_Grant_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Funds__c  &gt;  Grant__r.Amount__c</errorConditionFormula>
    <errorMessage>Total funds cannot exceed Grant Amount</errorMessage>
</ValidationRule>